@@ -7,6 +7,25 @@
 
 package com.evolveum.midpoint.schema;
 
+import static org.testng.AssertJUnit.*;
+
+import static com.evolveum.midpoint.prism.util.PrismTestUtil.*;
+import static com.evolveum.midpoint.xml.ns._public.common.common_3.AccessCertificationCampaignType.F_OWNER_REF;
+
+import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.List;
+import javax.xml.namespace.QName;
+
+import org.apache.commons.io.FileUtils;
+import org.jetbrains.annotations.NotNull;
+import org.testng.AssertJUnit;
+import org.testng.annotations.BeforeSuite;
+import org.testng.annotations.Test;
+import org.w3c.dom.Element;
+import org.xml.sax.SAXException;
+
 import com.evolveum.midpoint.prism.*;
 import com.evolveum.midpoint.prism.path.ItemPath;
 import com.evolveum.midpoint.prism.path.ParentPathSegment;
@@ -19,37 +38,18 @@ import com.evolveum.midpoint.prism.xnode.MapXNode;
 import com.evolveum.midpoint.schema.constants.MidPointConstants;
 import com.evolveum.midpoint.schema.constants.ObjectTypes;
 import com.evolveum.midpoint.schema.util.ObjectTypeUtil;
+import com.evolveum.midpoint.tools.testng.AbstractUnitTest;
 import com.evolveum.midpoint.util.DOMUtil;
 import com.evolveum.midpoint.util.DomAsserts;
 import com.evolveum.midpoint.util.PrettyPrinter;
 import com.evolveum.midpoint.util.exception.SchemaException;
-import com.evolveum.midpoint.util.logging.Trace;
-import com.evolveum.midpoint.util.logging.TraceManager;
 import com.evolveum.midpoint.xml.ns._public.common.common_3.*;
 import com.evolveum.prism.xml.ns._public.query_3.PagingType;
 import com.evolveum.prism.xml.ns._public.query_3.QueryType;
 import com.evolveum.prism.xml.ns._public.query_3.SearchFilterType;
 import com.evolveum.prism.xml.ns._public.types_3.PolyStringType;
-import org.apache.commons.io.FileUtils;
-import org.jetbrains.annotations.NotNull;
-import org.testng.AssertJUnit;
-import org.testng.annotations.BeforeSuite;
-import org.testng.annotations.Test;
-import org.w3c.dom.Element;
-import org.xml.sax.SAXException;
 
-import javax.xml.namespace.QName;
-import java.io.File;
-import java.io.IOException;
-import java.util.List;
-
-import static com.evolveum.midpoint.prism.util.PrismTestUtil.*;
-import static com.evolveum.midpoint.xml.ns._public.common.common_3.AccessCertificationCampaignType.F_OWNER_REF;
-import static org.testng.AssertJUnit.*;
-
-public class TestQueryConverter {
-
-    private static final Trace LOGGER = TraceManager.getTrace(TestQueryConverter.class);
+public class TestQueryConverter extends AbstractUnitTest {
 
     private static final File TEST_DIR = new File("src/test/resources/queryconverter");
 
@@ -61,8 +61,6 @@ public class TestQueryConverter {
     private static final QName stringExtensionDefinition = new QName(NS_EXTENSION, "stringType");
     private static final QName fooBlaDefinition = new QName(NS_BLA, "foo");
     private static final QName ICF_NAME = new QName(NS_ICFS, "name");
-
-    private static final QName TAG_QNAME = new QName(SchemaConstantsGenerated.NS_COMMON, "tag");
 
     private static final File FILTER_AND_GENERIC_FILE = new File(TEST_DIR, "filter-and-generic.xml");
     private static final File FILTER_ACCOUNT_FILE = new File(TEST_DIR, "filter-account.xml");
@@ -82,8 +80,6 @@ public class TestQueryConverter {
 
     @Test
     public void testAccountFilter() throws Exception {
-        displayTestTitle("testAccountFilter");
-
         SearchFilterType filterType = unmarshalFilter(FILTER_ACCOUNT_FILE);
         ObjectQuery query = toObjectQuery(ShadowType.class, filterType);
         displayQuery(query);
@@ -135,8 +131,6 @@ public class TestQueryConverter {
 
     @Test
     public void testAccountQueryAttributesAndResource() throws Exception {
-        displayTestTitle("testAccountQueryAttributesAndResource");
-
         SearchFilterType filterType = unmarshalFilter(FILTER_ACCOUNT_ATTRIBUTES_RESOURCE_REF_FILE);
         ObjectQuery query = toObjectQuery(ShadowType.class, filterType);
         displayQuery(query);
@@ -156,15 +150,11 @@ public class TestQueryConverter {
         PrismAsserts.assertEqualsFilterValue((EqualFilter) second, "uid=jbond,ou=People,dc=example,dc=com");
 
         QueryType convertedQueryType = toQueryType(query);
-        LOGGER.info(DOMUtil.serializeDOMToString(convertedQueryType.getFilter().getFilterClauseAsElement(getPrismContext())));
-
-        // TODO: add some asserts
+        logger.info(DOMUtil.serializeDOMToString(convertedQueryType.getFilter().getFilterClauseAsElement(getPrismContext())));
     }
 
     @Test
     public void testAccountQueryAttributesAndResourceNoNs() throws Exception {
-        displayTestTitle("testAccountQueryAttributesAndResourceNoNs");
-
         SearchFilterType filterType = unmarshalFilter(FILTER_ACCOUNT_ATTRIBUTES_RESOURCE_REF_NO_NS_FILE);
         ObjectQuery query = toObjectQuery(ShadowType.class, filterType);
         displayQuery(query);
@@ -185,14 +175,10 @@ public class TestQueryConverter {
 
         QueryType convertedQueryType = toQueryType(query);
         System.out.println(DOMUtil.serializeDOMToString(convertedQueryType.getFilter().getFilterClauseAsElement(getPrismContext())));
-
-        // TODO: add some asserts
     }
 
     @Test
     public void testAccountQueryCompositeOr() throws Exception {
-        displayTestTitle("testAccountQueryCompositeOr");
-
         SearchFilterType filterType = unmarshalFilter(FILTER_OR_COMPOSITE);
         ObjectQuery query = toObjectQuery(ShadowType.class, filterType);
         displayQuery(query);
@@ -222,14 +208,11 @@ public class TestQueryConverter {
         assertRefFilterValue((RefFilter) forth, "d0db5be9-cb93-401f-b6c1-86ffffe4cd5e");
 
         QueryType convertedQueryType = toQueryType(query);
-        LOGGER.info(DOMUtil.serializeDOMToString(convertedQueryType.getFilter().getFilterClauseAsElement(getPrismContext())));
-
-        // TODO: add some asserts
+        logger.info(DOMUtil.serializeDOMToString(convertedQueryType.getFilter().getFilterClauseAsElement(getPrismContext())));
     }
 
     @Test
     public void testConnectorQuery() throws Exception {
-        displayTestTitle("testConnectorQuery");
         SearchFilterType filterType = PrismTestUtil.parseAtomicValue(FILTER_CONNECTOR_BY_TYPE_FILE, SearchFilterType.COMPLEX_TYPE);
         ObjectQuery query;
         try {
@@ -245,19 +228,18 @@ public class TestQueryConverter {
             QueryType convertedQueryType = toQueryType(query);
             displayQueryType(convertedQueryType);
         } catch (Exception ex) {
-            LOGGER.error("Error while converting query: {}", ex.getMessage(), ex);
+            logger.error("Error while converting query: {}", ex.getMessage(), ex);
             throw ex;
         }
 
     }
 
-    private PrismObjectDefinition<UserType> getUserDefinition(){
+    private PrismObjectDefinition<UserType> getUserDefinition() {
         return getPrismContext().getSchemaRegistry().findObjectDefinitionByCompileTimeClass(UserType.class);
     }
 
     @Test
     public void testTypeFilterQuery() throws Exception {
-        displayTestTitle("testConnectorQuery");
         SearchFilterType filterType = PrismTestUtil.parseAtomicValue(FILTER_BY_TYPE_FILE, SearchFilterType.COMPLEX_TYPE);
         ObjectQuery query;
         try {
@@ -275,14 +257,11 @@ public class TestQueryConverter {
             PrismPropertyDefinition ppd = getUserDefinition().findPropertyDefinition(namePath);
             PrismAsserts.assertEqualsFilter(typeFilter.getFilter(), ppd.getItemName(), ppd.getTypeName(), namePath);
             PrismAsserts.assertEqualsFilterValue((EqualFilter) typeFilter.getFilter(), PrismTestUtil.createPolyString("some name identificator"));
-//            PrismAsserts.assertEqualsFilter(query.getFilter(), ConnectorType.F_CONNECTOR_TYPE, DOMUtil.XSD_STRING,
-//                    prismContext.path(ConnectorType.F_CONNECTOR_TYPE));
-//            PrismAsserts.assertEqualsFilterValue((EqualsFilter) filter, "org.identityconnectors.ldap.LdapConnector");
 
             QueryType convertedQueryType = toQueryType(query);
             displayQueryType(convertedQueryType);
         } catch (Exception ex) {
-            LOGGER.error("Error while converting query: {}", ex.getMessage(), ex);
+            logger.error("Error while converting query: {}", ex.getMessage(), ex);
             throw ex;
         }
 
@@ -290,7 +269,6 @@ public class TestQueryConverter {
 
     @Test
     public void testShadowKindTypeQuery() throws Exception {
-        displayTestTitle("testShadowKindTypeQuery");
         SearchFilterType filterType = PrismTestUtil.parseAtomicValue(FILTER_BY_TYPE_FILE, SearchFilterType.COMPLEX_TYPE);
         ObjectQuery query;
         try {
@@ -311,7 +289,7 @@ public class TestQueryConverter {
 
             displayQueryType(convertedQueryType);
         } catch (Exception ex) {
-            LOGGER.error("Error while converting query: {}", ex.getMessage(), ex);
+            logger.error("Error while converting query: {}", ex.getMessage(), ex);
             throw ex;
         }
 
@@ -324,8 +302,6 @@ public class TestQueryConverter {
         PrismReferenceValue val = (PrismReferenceValue) values.get(0);
 
         assertEquals(oid, val.getOid());
-        // TODO: maybe some more asserts for type, relation and other reference
-        // values
     }
 
     private ObjectQuery toObjectQuery(Class type, QueryType queryType) throws Exception {
@@ -360,8 +336,6 @@ public class TestQueryConverter {
 
     @Test
     public void testGenericQuery() throws Exception {
-        displayTestTitle("testGenericQuery");
-
         SearchFilterType queryType = unmarshalFilter(FILTER_AND_GENERIC_FILE);
         ObjectQuery query = toObjectQuery(GenericObjectType.class, queryType);
 
@@ -390,8 +364,6 @@ public class TestQueryConverter {
 
     @Test
     public void testUserQuery() throws Exception {
-        displayTestTitle("testUserQuery");
-
         File[] userQueriesToTest = new File[] { new File(TEST_DIR, "filter-user-by-fullName.xml"),
                 new File(TEST_DIR, "filter-user-by-name.xml"),
                 new File(TEST_DIR, "filter-user-substring-fullName.xml"),
@@ -402,20 +374,20 @@ public class TestQueryConverter {
         // prismContext.silentMarshalObject(queryTypeNew, LOGGER);
         for (File file : userQueriesToTest) {
             SearchFilterType filterType = PrismTestUtil.parseAtomicValue(file, SearchFilterType.COMPLEX_TYPE);
-            LOGGER.info("===[ query type parsed ]===");
+            logger.info("===[ query type parsed ]===");
             ObjectQuery query;
             try {
                 query = getQueryConverter().createObjectQuery(UserType.class, filterType);
-                LOGGER.info("query converted: ");
+                logger.info("query converted: ");
 
-                LOGGER.info("QUERY DUMP: {}", query.debugDump());
-                LOGGER.info("QUERY Pretty print: {}", query.toString());
+                logger.info("QUERY DUMP: {}", query.debugDump());
+                logger.info("QUERY Pretty print: {}", query.toString());
                 System.out.println("QUERY Pretty print: " + query.toString());
 
                 QueryType convertedQueryType = getQueryConverter().createQueryType(query);
-                LOGGER.info(DOMUtil.serializeDOMToString(convertedQueryType.getFilter().getFilterClauseAsElement(getPrismContext())));
+                logger.info(DOMUtil.serializeDOMToString(convertedQueryType.getFilter().getFilterClauseAsElement(getPrismContext())));
             } catch (Exception ex) {
-                LOGGER.error("Error while converting query: {}", ex.getMessage(), ex);
+                logger.error("Error while converting query: {}", ex.getMessage(), ex);
                 throw ex;
             }
         }
@@ -430,8 +402,8 @@ public class TestQueryConverter {
         assertNull(queryType.getFilter());
         PagingType paging = queryType.getPaging();
         assertNotNull(paging);
-        assertEquals(new Integer(0), paging.getOffset());
-        assertEquals(new Integer(10), paging.getMaxSize());
+        assertEquals(Integer.valueOf(0), paging.getOffset());
+        assertEquals(Integer.valueOf(10), paging.getMaxSize());
 
     }
 
@@ -457,7 +429,7 @@ public class TestQueryConverter {
         displayQueryType(q2jaxb);
         ObjectQuery q2object = toObjectQuery(objectClass, q2jaxb);
         assertEquals("Reparsed query is not as original one (via toString)", q1object.toString(), q2object.toString());    // primitive way of comparing parsed queries
-        assertTrue("Reparsed query is not as original one (via equivalent):\nq1="+q1object+"\nq2="+q2object, q1object.equivalent(q2object));
+        assertTrue("Reparsed query is not as original one (via equivalent):\nq1=" + q1object + "\nq2=" + q2object, q1object.equivalent(q2object));
     }
 
     private void checkQueryRoundtrip(Class<? extends Containerable> objectClass, ObjectQuery q1object, String q2xml) throws Exception {
@@ -467,100 +439,81 @@ public class TestQueryConverter {
         checkQuery(objectClass, q2object, q1xml);
     }
 
-    private void checkQueryRoundtripFile(Class<? extends Containerable> objectClass, ObjectQuery query, String testName) throws Exception {
-        String fileName = TEST_DIR + "/" + testName + ".xml";
-        checkQueryRoundtrip(objectClass, query, FileUtils.readFileToString(new File(fileName)));
+    private void checkQueryRoundtripFile(Class<? extends Containerable> objectClass, ObjectQuery query) throws Exception {
+        String fileName = TEST_DIR + "/" + getTestNameShort() + ".xml";
+        checkQueryRoundtrip(objectClass, query,
+                FileUtils.readFileToString(new File(fileName), StandardCharsets.UTF_8));
     }
 
     @Test
     public void test100All() throws Exception {
-        final String TEST_NAME = "test100All";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class).all().build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test110None() throws Exception {
-        final String TEST_NAME = "test110None";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class).none().build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test120Undefined() throws Exception {
-        final String TEST_NAME = "test120Undefined";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class).undefined().build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test200Equal() throws Exception {
-        final String TEST_NAME = "test200Equal";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .item(UserType.F_NAME).eqPoly("some-name", "somename").matchingOrig()
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test210EqualMultiple() throws Exception {
-        final String TEST_NAME = "test210EqualMultiple";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .item(UserType.F_EMPLOYEE_TYPE).eq("STD", "TEMP")
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test220EqualRightHandItem() throws Exception {
-        final String TEST_NAME = "test220EqualRightHandItem";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .item(UserType.F_EMPLOYEE_NUMBER).eq().item(UserType.F_COST_CENTER)
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test300Greater() throws Exception {
-        final String TEST_NAME = "test300Greater";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .item(UserType.F_COST_CENTER).gt("100000")
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test305GreaterLesserMatchingNorm() throws Exception {
-        final String TEST_NAME = "test305GreaterLesserMatchingNorm";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .item(UserType.F_NAME).ge(new PolyString("00", "00")).matchingNorm()
                 .and().item(UserType.F_NAME).lt(new PolyString("0a", "0a")).matchingNorm()
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test305GreaterOrEqual() throws Exception {
-        final String TEST_NAME = "test305GreaterOrEqual";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .item(UserType.F_COST_CENTER).ge("100000")
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test310AllComparisons() throws Exception {
-        final String TEST_NAME = "test310AllComparisons";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .item(UserType.F_COST_CENTER).gt("100000")
                 .and().item(UserType.F_COST_CENTER).lt("999999")
@@ -568,27 +521,22 @@ public class TestQueryConverter {
                 .item(UserType.F_COST_CENTER).ge("X100")
                 .and().item(UserType.F_COST_CENTER).le("X999")
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test350Substring() throws Exception {
-        final String TEST_NAME = "test350Substring";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .item(UserType.F_EMPLOYEE_TYPE).contains("A")
                 .or().item(UserType.F_EMPLOYEE_TYPE).startsWith("B")
                 .or().item(UserType.F_EMPLOYEE_TYPE).endsWith("C")
                 .or().item(UserType.F_NAME).startsWithPoly("john", "john").matchingOrig()
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test360Ref() throws Exception {
-        final String TEST_NAME = "test360Ref";
-        displayTestTitle(TEST_NAME);
-
         // we test only parsing here, as there are more serialized forms used here
         ObjectQuery q1object = getPrismContext().queryFor(ShadowType.class)
                 .item(ShadowType.F_RESOURCE_REF).ref("oid1")
@@ -598,26 +546,26 @@ public class TestQueryConverter {
                 .build();
         q1object.getFilter().checkConsistence(true);
 
-        String q2xml = FileUtils.readFileToString(new File(TEST_DIR + "/" + TEST_NAME + ".xml"));
+        String q2xml = FileUtils.readFileToString(
+                new File(TEST_DIR + "/" + getTestNameShort() + ".xml"),
+                StandardCharsets.UTF_8);
         displayQueryXml(q2xml);
         QueryType q2jaxb = toQueryType(q2xml);
         displayQueryType(q2jaxb);
         ObjectQuery q2object = toObjectQuery(ShadowType.class, q2jaxb);
 
-        System.out.println("q1object:\n"+q1object.debugDump(1));
-        System.out.println("q2object:\n"+q2object.debugDump(1));
+        System.out.println("q1object:\n" + q1object.debugDump(1));
+        System.out.println("q2object:\n" + q2object.debugDump(1));
 
         assertEquals("Reparsed query is not as original one (via toString)", q1object.toString(), q2object.toString());    // primitive way of comparing parsed queries
 
         if (!q1object.equivalent(q2object)) {
-            AssertJUnit.fail("Reparsed query is not as original one (via equivalent):\nq1="+q1object+"\nq2="+q2object);
+            AssertJUnit.fail("Reparsed query is not as original one (via equivalent):\nq1=" + q1object + "\nq2=" + q2object);
         }
     }
 
     @Test
     public void test365RefTwoWay() throws Exception {
-        final String TEST_NAME = "test365RefTwoWay";
-        displayTestTitle(TEST_NAME);
         PrismReferenceValue reference3 = getPrismContext().itemFactory().createReferenceValue("oid3", ResourceType.COMPLEX_TYPE).relation(new QName("test"));
         PrismReferenceValue reference4 = getPrismContext().itemFactory().createReferenceValue("oid4", ResourceType.COMPLEX_TYPE).relation(new QName("test"));
         ObjectQuery q = getPrismContext().queryFor(ShadowType.class)
@@ -625,38 +573,29 @@ public class TestQueryConverter {
                 .or().item(ShadowType.F_RESOURCE_REF).ref("oid2", ResourceType.COMPLEX_TYPE)
                 .or().item(ShadowType.F_RESOURCE_REF).ref(reference3, reference4)
                 .build();
-        checkQueryRoundtripFile(ShadowType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(ShadowType.class, q);
     }
 
     @Test
     public void test400OrgFilterRoot() throws Exception {
-        final String TEST_NAME = "test400OrgFilterRoot";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(OrgType.class).isRoot().build();
-        checkQueryRoundtripFile(OrgType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(OrgType.class, q);
     }
 
     @Test
     public void test410OrgFilterSubtree() throws Exception {
-        final String TEST_NAME = "test410OrgFilterSubtree";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(OrgType.class).isChildOf("111").build();
-        checkQueryRoundtripFile(OrgType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(OrgType.class, q);
     }
 
     @Test
     public void test420OrgFilterDirect() throws Exception {
-        final String TEST_NAME = "test420OrgFilterDirect";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(OrgType.class).isDirectChildOf("222").build();
-        checkQueryRoundtripFile(OrgType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(OrgType.class, q);
     }
 
     @Test
     public void test430OrgFilterDefaultScope() throws Exception {
-        final String TEST_NAME = "test430OrgFilterDefaultScope";
-        displayTestTitle(TEST_NAME);
-
         // default scope is SUBTREE
         String queryXml = "<?xml version='1.0'?><query><filter><org>\n" +
                 "        <orgRef>\n" +
@@ -672,115 +611,102 @@ public class TestQueryConverter {
         assertEquals("Parsed query is wrong", expectedQuery.toString(), query.toString());            // primitive way of comparing queries
 
         // now reserialize the parsed query and compare with XML - the XML contains explicit scope=SUBTREE (as this is set when parsing original queryXml)
-        checkQueryRoundtripFile(OrgType.class, query, TEST_NAME);
+        checkQueryRoundtripFile(OrgType.class, query);
     }
 
     @Test
     public void test500InOid() throws Exception {
-        final String TEST_NAME = "test500InOid";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .id("oid1", "oid2", "oid3")
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test505InOidEmpty() throws Exception {
-        final String TEST_NAME = "test505InOidEmpty";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .id(new String[0])
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test510InOidContainer() throws Exception {
-        final String TEST_NAME = "test510InOidContainer";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .id(1, 2, 3)
                 .and().ownerId("oid4")
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test590Logicals() throws Exception {
-        final String TEST_NAME = "test590Logicals";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .block()
-                    .all()
-                    .or().none()
-                    .or().undefined()
+                .all()
+                .or().none()
+                .or().undefined()
                 .endBlock()
                 .and().none()
                 .and()
-                    .not()
-                        .block()
-                            .all()
-                            .and().undefined()
-                        .endBlock()
+                .not()
+                .block()
+                .all()
+                .and().undefined()
+                .endBlock()
                 .build();
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test595Logicals2() throws Exception {
-        final String TEST_NAME = "test595Logicals2";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(UserType.class)
                 .item(UserType.F_DESCRIPTION).eq("A")
                 .and().item(UserType.F_DESCRIPTION).eq("B")
                 .or().item(UserType.F_DESCRIPTION).eq("C")
                 .and().item(UserType.F_DESCRIPTION).eq("D")
                 .and()
-                    .block()
-                        .item(UserType.F_DESCRIPTION).eq("E1")
-                        .and().item(UserType.F_DESCRIPTION).eq("E2")
-                        .or().item(UserType.F_DESCRIPTION).eq("E3")
-                    .endBlock()
+                .block()
+                .item(UserType.F_DESCRIPTION).eq("E1")
+                .and().item(UserType.F_DESCRIPTION).eq("E2")
+                .or().item(UserType.F_DESCRIPTION).eq("E3")
+                .endBlock()
                 .build();
 
-        checkQueryRoundtripFile(UserType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(UserType.class, q);
     }
 
     @Test
     public void test600Type() throws Exception {
-        final String TEST_NAME = "test600Type";
-        displayTestTitle(TEST_NAME);
         ObjectQuery q = getPrismContext().queryFor(ObjectType.class)
                 .type(UserType.class)
-                    .item(UserType.F_NAME).eqPoly("somename", "somename")
+                .item(UserType.F_NAME).eqPoly("somename", "somename")
                 .build();
-        checkQueryRoundtripFile(ObjectType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(ObjectType.class, q);
     }
 
     @Test
     public void test700Exists() throws Exception {
-        final String TEST_NAME = "test700Exists";
-        displayTestTitle(TEST_NAME);
         PrismReferenceValue ownerRef = ObjectTypeUtil.createObjectRef("1234567890", ObjectTypes.USER).asReferenceValue();
         ObjectQuery q = getPrismContext().queryFor(AccessCertificationCaseType.class)
                 .exists(new ParentPathSegment())        // if using T_PARENT then toString representation of paths is different
-                    .block()
-                        .id(123456L)
-                        .or().item(F_OWNER_REF).ref(ownerRef)
-                    .endBlock()
+                .block()
+                .id(123456L)
+                .or().item(F_OWNER_REF).ref(ownerRef)
+                .endBlock()
                 .and().exists(AccessCertificationCaseType.F_WORK_ITEM)
-                    .item(AccessCertificationWorkItemType.F_STAGE_NUMBER).eq(3)
+                .item(AccessCertificationWorkItemType.F_STAGE_NUMBER).eq(3)
                 .build();
-        checkQueryRoundtripFile(AccessCertificationCaseType.class, q, TEST_NAME);
+        checkQueryRoundtripFile(AccessCertificationCaseType.class, q);
     }
+
+    public static final String TEST_900_910_FILE_NAME = TEST_DIR + "/test900TypeWrong.xml";
 
     @Test
     public void test900TypeWrong() throws Exception {
-        final String TEST_NAME = "test900TypeWrong";
-        String fileName = TEST_DIR + "/" + TEST_NAME + ".xml";
         try {
-            toQueryType(FileUtils.readFileToString(new File(fileName)));
+            toQueryType(FileUtils.readFileToString(
+                    new File(TEST_900_910_FILE_NAME), StandardCharsets.UTF_8));
             fail("Unexpected success!");
         } catch (SchemaException e) {
             System.out.println("Got expected exception: " + e.getMessage());
@@ -789,9 +715,8 @@ public class TestQueryConverter {
 
     @Test
     public void test910TypeWrongCompat() throws Exception {
-        final String TEST_NAME = "test900TypeWrong";
-        String fileName = TEST_DIR + "/" + TEST_NAME + ".xml";
-        QueryType jaxb = toQueryTypeCompat(FileUtils.readFileToString(new File(fileName)));
+        QueryType jaxb = toQueryTypeCompat(FileUtils.readFileToString(
+                new File(TEST_900_910_FILE_NAME), StandardCharsets.UTF_8));
         displayQueryType(jaxb);
         try {
             ObjectQuery query = toObjectQuery(ObjectType.class, jaxb);
@@ -806,7 +731,6 @@ public class TestQueryConverter {
 
     @Test
     public void test920QueryTypeEquals() throws Exception {
-        final String TEST_NAME = "test920QueryTypeEquals";
         ObjectQuery query1 = getPrismContext().queryFor(ShadowType.class)
                 .id("8657eccf-c60d-4b5c-bbd4-4c73ecfd6436")
                 .and().item(ShadowType.F_RESOURCE_REF).ref("aeff994e-381a-4fb3-af3b-f0f5dcdc9653")
